# backend

./: Procfile  build.sh  db.sqlite3  gunicorn.conf.py  pyproject.toml  requirements.txt
pages/: forms.py  models.py  views.py
pages/migrations/: 0001_initial.py  0002_destination_pais_itinerary_destination_and_more.py
pages/templates/: accomodation_list.html  destination_detail.html  destination_list.html  home.html  itinerary_create.html  login.html  logout.html  profile.html  register.html
proyectoFinal/: settings.py  urls.py
